fix: add overflow

--- a/src/assets/scss/partials/_base.scss
+++ b/src/assets/scss/partials/_base.scss
@@ -1,5 +1,6 @@
 body,
 html {
+  @apply overflow-x-hidden;
   text-rendering: optimizeLegibility;
   font-smooth: always;
   font-smoothing: antialiased;
